changes to heroku version

--- a/common/templates/common/home.html
+++ b/common/templates/common/home.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi... main page is here</h1>>
+    <h1>Hi... main page is here....welcome</h1>>
 </body>
 </html>
